--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <link href="./resources/fontawesome-5.15.3/css/fontawesome.css" rel="stylesheet">
     <link href="./resources/fontawesome-5.15.3/css/brands.css" rel="stylesheet">
     <link href="./resources/fontawesome-5.15.3/css/solid.css" rel="stylesheet">
-    <title>Hello, world!</title>
+
+    <title>Salaar!</title>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Salaar</a>
+<body style="background-color: rgb(0, 0, 0);">
+    <nav id="navbar" class="navbar fixed-top navbar-expand-lg bgLight navbar-light">
+        <a class="navbar-brand" href="#">
+            <img src="./resources/img/logoBlack.png" class="logo">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,11 +31,15 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./services.html">Our Services</a>
+                    <a class="nav-link" href="./locations.html">Locations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./aboutus.html">About us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./services.html">Services</a>
+                </li>
+                
                 <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -49,14 +56,13 @@
                     <a class="nav-link" href="#contact">Contact Us</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            </form> -->
         </div>
     </nav>
-    <br/>
-    <div class="container">
+    <div class="mt001">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -79,11 +85,12 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="Track row">
+    <div class="Track row">
             <div class="innerTrackText">
                 <span>
-          <i class="fas fa-camera iconLoc"></i>
-          <span>Track Your Shipment</span>
+          <!-- <i class="fas fa-camera iconLoc"></i> -->
+          <i style="color: #ffc226;" class ="fa fa-phone"></i>
+          <span style="color: #ffc226;">999999999</span>
                 </span>
             </div>
         </div>
@@ -91,8 +98,8 @@
 
         <div class="image">
             <div class="Text">
-                <h1>About Salaar</h1>
-                <p>We are Canada's leading truck services</p>
+                <h1>Welcome to Salaar Towing Services</h1>
+                <p>We are Canada's leading truck services </p>
             </div>
         </div>
 
@@ -102,32 +109,34 @@
             <div class="col-md-3 column">
                 <div class="perColImg">
                     <div class="innerColTxt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae auctor erat. Nullam ornare gravida dui sed sagittis. Ut id leo turpis. Proin malesuada sollicitudin justo id auctor. Cras consequat suscipit tristique.
+                        <h1>Your</h1>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 column">
-                <div class="perColImg">
+                <div class="perColImg1">
                     <div class="innerColTxt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae auctor erat. Nullam ornare gravida dui sed sagittis. Ut id leo turpis. Proin malesuada sollicitudin justo id auctor. Cras consequat suscipit tristique.
+                        <h1>One</h1>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 column">
-                <div class="perColImg">
+                <div class="perColImg2">
                     <div class="innerColTxt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae auctor erat. Nullam ornare gravida dui sed sagittis. Ut id leo turpis. Proin malesuada sollicitudin justo id auctor. Cras consequat suscipit tristique.
+                        <h1>Stop</h1>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 column">
-                <div class="perColImg">
+                <div class="perColImg3">
                     <div class="innerColTxt">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae auctor erat. Nullam ornare gravida dui sed sagittis. Ut id leo turpis. Proin malesuada sollicitudin justo id auctor. Cras consequat suscipit tristique.
+                        <h1>Shop</h1>
+                        
                     </div>
                 </div>
             </div>
         </div>
+        <br/>
         <div class="col-md row">
             <div class="col-md-6 column">
                 <img src="resources/img/aboutustruck.png" alt="Truck">
@@ -135,14 +144,14 @@
             <div class="col-md-6 column">
                 <div class="perColnewImg">
                     <div class="innerText">
-                        <h2 class="section_header numbered_header">WHAT <strong>WE OFFER</strong> </h2>
-                        <p class="small-text">effective flatbed transportation</p>
+                        <h2 class="section_header numbered_header">WHAT <strong style="color: #ffc226;">WE OFFER</strong> </h2>
+                        <p class="small-text" style="color: #ffc326;">effective flatbed transportation</p>
                         <hr class="divider_30_3 zebra_bg">
-                        <p>We provide fast, courteous and inexpensive towing services in New York. We are fully insured and been in business since 1986. We are ready to respond to all your vehicle emergency needs 24 hours a day, seven days a week.</p>
+                        <p style="color: #ffc326;">We provide fast, courteous and inexpensive towing services in Canada. We are fully insured and been in business since 1986. We are ready to respond to all your vehicle emergency needs 24 hours a day, seven days a week.</p>
                         <div class="inline-block topmargin_10">
                             <ul class="fa-ul">
-                                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>List icons can</li>
-                                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>be used to</li>
+                                <li style="color: #ffc226;"><span class="fa-li"><i class="fas fa-check-square"></i></span>Reliable</li>
+                                <li style="color: #ffc226;"><span class="fa-li"><i class="fas fa-check-square"></i></span>Fast</li> 
                             </ul>
                         </div>
                     </div>
@@ -182,38 +191,35 @@
             </div>
         </div>
         <br />
-        <div id="contact">
-            <div class="col-md row" style="padding: 2% 6%;">
-                <div class="col-md-4">
-                    <div class="text-center">
-                        <i class="fa fa-map-marker-alt contactIcons" aria-hidden="true"></i>
-                        <h3 style="color: #ffffff;"><b>Address</b></h3>
-                        <p class="contactP"><b>Weifield Group Contracting</b></p>
-                        <p class="contactP">6950 S. Jordan Road<br> Centennial, CO 80112</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="text-center">
-                        <i class="fa fa-phone-square contactIcons" aria-hidden="true"></i>
-                        <h3 style="color: #ffffff;"><b>Phone</b></h3>
-                        <p class="contactP"><b>Weifield Group Contracting</b></p>
-                        <p class="contactP" 6950 S. Jordan Road<br>
-                            Centennial, CO 80112</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="text-center">
-                        <i class="fa fa-envelope contactIcons" aria-hidden="true"></i>
-                        <h3 style="color: #ffffff;"><b>Email</b></h3>
-                        <p class="contactP"><b>Weifield Group Contracting</b></p>
-                        <p class="contactP">6950 S. Jordan Road<br> Centennial, CO 80112</p>
-                    </div>
+    </div>
+    <div id="contact">
+        <div class="col-md row" style="padding: 2% 6%;">
+            <div class="col-md-4">
+                <div class="text-center">
+                    <i class="fa fa-map-marker-alt contactIcons" aria-hidden="true"></i>
+                    <h4 style="color: #ffc326;"><b>Address</b></h4>
+                    <p class="contactP"><b>Weifield Group Contracting</b></p>
+                    <p class="contactP">6950 S. Jordan Road<br> Centennial, CO 80112</p>
                 </div>
             </div>
-            <br />
-            <br />
+            <div class="col-md-4">
+                <div class="text-center">
+                    <i class="fa fa-phone-square contactIcons" aria-hidden="true"></i>
+                    <h4 style="color: #ffc326;"><b>Phone</b></h4>
+                    <p class="contactP"><b>Salaar Towing Service</b></p>
+                    <p class="contactP">6950 S. Jordan Road<br/> Centennial, CO 80112</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="text-center">
+                    <i class="fa fa-envelope contactIcons" aria-hidden="true"></i>
+                    <h4 style="color: #ffc326;"><b>Email</b></h4>
+                    <p class="contactP"><b>Weifield Group Contracting</b></p>
+                    <p class="contactP">6950 S. Jordan Road<br/> Centennial, CO 80112</p>
+                </div>
+            </div>
         </div>
-
+        <br />
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
